fix flicker in arousel

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -148,9 +148,35 @@ body {
 .slick-dots .slick-active button::after   {
   background-color: var(--main-red);
   height: 1.5rem;
-  /* border-radius: 0.375rem; */
 }
 
-/* .h-modal {
-  overflow-y: scroll !important;
-} */
+.slick-slide,
+.slick-slider .slick-track,
+.slick-slider .slick-list {
+  will-change: transform;
+  -webkit-transform: translate3d(0, 0, 0);
+  -moz-transform: translate3d(0, 0, 0);
+  -ms-transform: translate3d(0, 0, 0);
+  -o-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
+  transform-style: preserve-3d;
+  transition-property: transform;
+
+  -webkit-transform: translateZ(0);
+  -moz-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  -o-transform: translateZ(0);
+  transform: translateZ(0);
+
+  -webkit-perspective: 1000px;
+  -moz-perspective: 1000px;
+  -ms-perspective: 1000px;
+  perspective: 1000px;
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -ms-backface-visibility: hidden;
+  backface-visibility: hidden;
+
+  transform: translate3d(0, 0, 0);
+  transition-delay: 10ms;
+}
